libreoffice (1:7.3.0~rc2-2) UNRELEASED; urgency=medium

  * debian/tests/control.in, debian/tests/uicheck-{sfx2,svx}:
    also run uitests in sfx2 and svx

 -- Rene Engelhard <rene@debian.org>  Sat, 15 Jan 2022 13:22:00 +0100

libreoffice (1:7.3.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate

 -- Rene Engelhard <rene@debian.org>  Wed, 12 Jan 2022 20:17:15 +0100

libreoffice (1:7.3.0~rc1-2) experimental; urgency=medium

  * debian/patches/fix-uicheck-tests-on-i386.patch: update
  * debian/patches/fix-Tdf126116-test.diff: add upstream patch from gerrit;
    fix upstream FTBFS timebomb found by reproducible builds

  * debian/tests/*: rename "uno" to "testtools-bridgetest", since it's
    more telling (and inside testtols anyway, uno is just the command
    ran)

 -- Rene Engelhard <rene@debian.org>  Thu, 23 Dec 2021 17:23:03 +0100

libreoffice (1:7.3.0~rc1-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/rules:
    - add support (don't use it (yet)) for using --enable-cipher-openssl-backend
    - limit llvm build-dep to le/skia-using archs
    - build the mysqlc test only on the archs we run the actual test (at least
      for now)
    - bump liborcus-dev build-depends to >= 0.17.2 if we run the tests

 -- Rene Engelhard <rene@debian.org>  Sun, 28 Nov 2021 16:46:17 +0100

libreoffice (1:7.3.0~beta1-4) experimental; urgency=medium

  * debian/rules:
    - add explicit Build-Depends on llvm since clang doesn't pull in
      llvm-xx-linker-tools anymore

 -- Rene Engelhard <rene@debian.org>  Sat, 11 Dec 2021 15:26:54 +0100

libreoffice (1:7.3.0~beta1-3) experimental; urgency=medium

  * debian/patches/fix-mysqlc-test.diff: as name says, from gerrit

  * debian/rules:
    - build the connectivity mysqlc test with the rest of the tests so it
      doesn't do that in the actual autopkgtest test
    - stop hardcoding clang-12 for ppc64el, add build-dep on clang (>= 1:12)
      now that 13 is default in sid