@@ -32,25 +32,38 @@ Restrictions: allow-stderr, needs-root, superficial
 # in the following some tests need RTL and CJK language packs installed to pass.
 # he is the example for RTL, zh-tw for CJK (and zh-tw was choosen to also test xx-YY locales)
 
-Tests: uicheck-cui
-Depends: @builddeps@, libreoffice-core, libreoffice-impress, libreoffice-writer, python3-uno
-Restrictions: allow-stderr
-
-Tests: uicheck-sc
-Architecture: %OOO_JAVA_ARCHS%
-Depends: @builddeps@, libreoffice-core, libreoffice-calc, libreoffice-draw, python3-uno, libreoffice-l10n-he, libreoffice-l10n-zh-tw, libreoffice-java-common, libreoffice-writer
-Restrictions: allow-stderr
+# Maybe all those tests should be merged into one (especially for the "small" ones like writerperfect or
+# "tiny" ones like sfx2,svx,cui.
+# But it already takes ~1.5 h (though including copy..) for all them to run on amd64 and the overall autopkgtest
+# test timeout is 166 min (a bit over 2.5 hrs.). What are we doing on slow archs?
+# And secondly. one might miss breakage if Java or another package is not installed but is
+# required because everything needed would be in Depends: then for one test...
+# Try to optimize a bit though by not sorting alphabetically but where the  new packages are a superset so
+# we can reuse the testbed
 
 Tests: uicheck-sfx2
 Depends: @builddeps@, libreoffice-core, libreoffice-impress, python3-uno
+Restrictions: allow-stderr
+
+Tests: uicheck-svx
+Depends: @builddeps@, libreoffice-core, libreoffice-impress, python3-uno
+Restrictions: allow-stderr
+
+Tests: uicheck-cui
+Depends: @builddeps@, libreoffice-core, libreoffice-impress, libreoffice-writer, python3-uno
 Restrictions: allow-stderr
 
 Tests: uicheck-sd
 Depends: @builddeps@, libreoffice-core, libreoffice-draw, libreoffice-impress, libreoffice-calc, python3-uno
 Restrictions: allow-stderr
 
-Tests: uicheck-svx
-Depends: @builddeps@, libreoffice-core, libreoffice-impress, python3-uno
+Tests: uicheck-writerperfect
+Depends: @builddeps@, libreoffice-core, libreoffice-writer, python3-uno
+Restrictions: allow-stderr
+
+Tests: uicheck-sc
+Architecture: %OOO_JAVA_ARCHS%
+Depends: @builddeps@, libreoffice-core, libreoffice-calc, libreoffice-draw, python3-uno, libreoffice-l10n-he, libreoffice-l10n-zh-tw, libreoffice-java-common, libreoffice-writer
 Restrictions: allow-stderr
 
 Tests: uicheck-sw
@@ -60,10 +73,6 @@ Restrictions: allow-stderr, needs-internet
 
 Tests: uicheck-uitest
 Depends: @builddeps@, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-impress, libreoffice-math, libreoffice-base, python3-uno, libreoffice-l10n-he, libreoffice-l10n-zh-tw
-Restrictions: allow-stderr
-
-Tests: uicheck-writerperfect
-Depends: @builddeps@, libreoffice-core, libreoffice-writer, python3-uno
 Restrictions: allow-stderr
 
 Tests: junit-subsequentcheck
@@ -86,11 +95,6 @@ Architecture: %OOO_NOGUI_ARCHS%
 Depends: @builddeps@, libreoffice-core-nogui, libreoffice-dev, libreoffice-dev-doc, libreoffice-java-common, libofficebean-java
 Restrictions: allow-stderr, skippable
 
-Test-Command: for i in /etc/apparmor.d/usr.lib.libreoffice.program.*; do /sbin/apparmor_parser --add --skip-cache --skip-kernel-load $i; done
-Features: test-name=apparmor-profiles-syntax-check
-Depends: libreoffice-common, apparmor
-Restrictions: allow-stderr, superficial
-
 Tests: cppunit-subsequentcheck
 Architecture: %OOO_CHECK_FATAL_ARCHS%
 Depends: @builddeps@, %AUTOPKGTEST_CPPUNIT_PACKAGES%
@@ -108,6 +112,11 @@ Tests: unitcheck
 Architecture: %OOO_CHECK_FATAL_ARCHS%
 Depends: @builddeps@, %AUTOPKGTEST_CPPUNIT_PACKAGES%
 Restrictions: build-needed, rw-build-tree, allow-stderr, superficial, skippable
+
+Test-Command: for i in /etc/apparmor.d/usr.lib.libreoffice.program.*; do /sbin/apparmor_parser --add --skip-cache --skip-kernel-load $i; done
+Features: test-name=apparmor-profiles-syntax-check
+Depends: libreoffice-common, apparmor
+Restrictions: allow-stderr, superficial
 
 # This one tests real connection to a MySQL and works by symlinking that one
 # specific library to the one in libreoffice-sdbc-mysql
