@@ -2,6 +2,9 @@ libreoffice (1:7.3.0~rc2-2) UNRELEASED; urgency=medium
 
   * debian/tests/control.in, debian/tests/uicheck-{sfx2,svx}:
     also run uitests in sfx2 and svx
+  * debian/tests/control.in: try to optimize the order of the tests
+    a bit (especially for uicheck-*) to try reusing the testbed and
+    avoid costly copy(up|down)s
 
  -- Rene Engelhard <rene@debian.org>  Sat, 15 Jan 2022 13:22:00 +0100
 
